--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>WhosArjun's Website</title>
   </head>
   <body>
-    <h1>My Github Website🎉</h1>
+    <h1>Hello World 🎉</h1>
     <p>This site is hosted with GitHub Pages.</p>
   </body>
 </html>
